--- a/src/public/index.html
+++ b/src/public/index.html
@@ -29,7 +29,7 @@
         <div class="navbar-header">
           <ul class="nav navbar-nav clear">
             <li><a href="#festivities">Festivities</a></li>
-            <li><a href="#directions">Directions</a></li>
+            <li><a href="#directions">Getting There</a></li>
             <li><a href="#hotels">Accomodations</a></li>
             <li><a href="#todo">Things To Do</a></li>
             <li><a href="#registry">Registry</a></li>
@@ -94,7 +94,7 @@
       <!-- Directions -->
       <div class="container">
         <a name="directions"></a>
-        <h2><span>Directions</span></h2>
+        <h2>Getting There</h2>
 
           <p>The best way to get directions to Maple Shade is to use
            <a title="Click to enter directions"
@@ -109,6 +109,8 @@
 
           <p>The closest airport is in Binghamton (BGM), but if you're renting
           a car it's possible that flying to EWR, JFK, or LGA will be less costly.</p>
+
+          <p>Please <a href="mailto:dpitachip@gmail.com">contact us</a> if you want to carpool or have space in your vehicle for others.</p>
 
           <h3>Taxi Services</h3>
 
