--- a/src/public/index.html
+++ b/src/public/index.html
@@ -110,6 +110,8 @@
           <p>The closest airport is in Binghamton (BGM), but if you're renting
           a car it's possible that flying to EWR, JFK, or LGA will be less costly.</p>
 
+          <p>You can also take the <a href="http://trailwaysny.com/index.php/terminal-locations/">Trailways</a> bus line to Oneonta, and the station is close to the center of town where taxi pickup can be easily arranged.</p>
+
           <p>Please <a href="mailto:dpitachip@gmail.com">contact us</a> if you want to carpool or have space in your vehicle for others.</p>
 
           <h3>Taxi Services</h3>
