Use relative assets path
Change-Id: I3d594de608fb670db3eded6ad93f6cf6729d5539

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css" />
 -->
 
-    <link href="/assets/css/wedding.css" rel="stylesheet">
+    <link href="assets/css/wedding.css" rel="stylesheet">
 
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -50,7 +50,7 @@
         <h3>September 27, 2014</h3>
 
         <div class="row text-center" style="padding:5px">
-          <img class="round" style="max-width:400px" src="/assets/img/dpita2.jpg" />
+          <img class="round" style="max-width:400px" src="assets/img/dpita2.jpg" />
         </div>
 
         <br style="clear:left" />
@@ -86,7 +86,7 @@
         <p>607.746.8866</p>
         <p>Come say hi to the newlyweds back at the farm for a bite before you travel home. Dress is casual.</p>
          <a href="http://www.mapleshadefarmny.com/">
-          <img src="/assets/img/maple-shade-front.jpg"
+          <img src="assets/img/maple-shade-front.jpg"
           class="round" />
         </a>
       </div>
@@ -128,7 +128,7 @@
           <p>607.267.1834</p>
         <div class="imagetitle">
         <a href="https://www.google.com/maps/dir//Maple+Shade+Farm,+2066+County+Hwy+18,+Delhi,+NY+13753/@42.316361,-74.898578,11z/data=!4m8!4m7!1m0!1m5!1m1!1s0x89dc7a3d318ba153:0x42a252d66d671cfc!2m2!1d-74.8702!2d42.301286?hl=en-US">
-          <img alt="Google Map" src="/assets/img/maple-shade-map.jpg"
+          <img alt="Google Map" src="assets/img/maple-shade-map.jpg"
             class="round" />
           </a>
         </div>
@@ -170,7 +170,7 @@
 
         <div class="imagetitle">
         <a href="http://hamptoninn3.hilton.com/en/hotels/new-york/hampton-inn-oneonta-ONHNJHX/accommodations/suites.html">
-          <img src="/assets/img/hampton-inn-room.jpg" class="round" />
+          <img src="assets/img/hampton-inn-room.jpg" class="round" />
         </a>
         </div>
       </div>
@@ -199,7 +199,7 @@
        with questions, comments, or excitations!</p>
        <p>&nbsp;</p>
     </div> <!-- /container -->
-    <script src="/assets/js/wedding.js"></script>
+    <script src="assets/js/wedding.js"></script>
     <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
