--- a/src/public/index.html
+++ b/src/public/index.html
@@ -183,8 +183,10 @@
 
       <div class="container">
         <a name="registry"></a>
-        <h2>Gift Registry</h2>
-        <p>Details Coming Soon</p>
+        <h2>Gift Registries</h2>
+        <p><a href="http://www.crateandbarrel.com/Gift-Registry/Danielle-Pollaci-and-Christopher-Carpita/r5206935">Crate &amp; Barrel</a></p>
+        <p><a href="http://www.amazon.com/registry/wedding/2OH743OTJTULW">Amazon</a></p>
+        <p><a href="http://www.honeyfund.com/wedding/dpita">HoneyFund</a></p>
       </div>
 
       <div class="container">
