Add Stella Luna
Change-Id: I41785e19c40b4ebc897504182d39358ee01dd98f

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -64,11 +64,14 @@
         <h3>Friday, September 26th</h3>
 
         <h4>Rehearsal Dinner <small>5pm-7pm (Family invited)</small></h4>
-        <p>Location TBD near Oneonta&mdash; close to major hotels</p>
+        <p><a href="http://www.stellalunas.com/">Stella Luna Ristorante</a></p>
+        <p>58-60 Market Street, Oneonta, NY 13820</p>
+        <p>607.443.7646</p>
         <p>Dress is business casual.</p>
 
         <h4>Rehearsal Bowl <small>8pm-10pm (Everyone invited)</small></h4>
         <p>Holiday Lanes&mdash; 5198 State Highway 23 # 1, Oneonta, NY 13820</p>
+        <p>Snacks Available</p>
         <p>607.432.2540</p>
 
         <p>Come say hello to the bride and groom, mingle with friends and family, and bowl a game or two. There's also an arcade, pool tables, a full bar, and pub menu. We will have a few lanes reserved. Shoe rental and a game is $9. We will send an Eventbrite invitation as the date gets closer for RSVP. Dress is casual!</p>
