Things to do, minor edits, <li> style fix
Change-Id: I7ce26a71867c9ba5030898f7e81994a6d98e1adc

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -70,11 +70,12 @@
         <p>Dress is business casual.</p>
 
         <h4>Rehearsal Bowl <small>8pm-10pm (Everyone invited)</small></h4>
-        <p>Holiday Lanes&mdash; 5198 State Highway 23 # 1, Oneonta, NY 13820</p>
-        <p>Snacks Available</p>
+        <p><a href="https://www.facebook.com/pages/Holiday-Lanes-Bowling-Center/179405905417323">Holiday Lanes</a></p>
+        <p>5198 State Highway 23 # 1, Oneonta, NY 13820</p>
         <p>607.432.2540</p>
+        <p>Dress is casual.</p>
 
-        <p>Come say hello to the bride and groom, mingle with friends and family, and bowl a game or two. There's also an arcade, pool tables, a full bar, and pub menu. We will have a few lanes reserved. Shoe rental and a game is $9. We will send an Eventbrite invitation as the date gets closer for RSVP. Dress is casual!</p>
+        <p>Come say hello to the bride and groom, mingle with friends and family, and bowl a game or two. There's also an arcade, pool tables, a full bar, and snacks. We will have a few lanes reserved. Shoe rental and a game is $9.</p>
 
         <h3>Saturday, September 27th</h3>
 
@@ -147,7 +148,7 @@
         <a name="hotels"></a>
 
         <h3>Hampton Inn - <small>$99/night</small></h3>
-        <p>We have blocks of rooms reserved at this hotel. Make sure to mention the "Pollaci-Carpita Wedding" to get the group rate, which will be valid until late July. We recommend people book their accommodations as soon as possible, as this is a popular time of year for visitors. Check in time is 3pm.</p>
+        <p>We have blocks of rooms reserved at this hotel. Make sure to mention the "Pollaci-Carpita Wedding" to get the group rate, which will be valid until August 20th. We recommend people book their accommodations as soon as possible, as this is a popular time of year for visitors. Check in time is 3pm.</p>
         <p>225 River Street, Oneonta, New York, 13820</p>
         <p>607.433.9000</p>
         <p><a href="http://hamptoninn3.hilton.com/en/hotels/new-york/hampton-inn-oneonta-ONHNJHX/accommodations/suites.html">Hampton Inn Website</a></p>
@@ -181,15 +182,30 @@
       <div class="container">
         <a name="todo"></a>
         <h2>Things to Do</h2>
-        <p>Details Coming Soon</p>
+        <p>There's lots to do in the Catskills region, which you will go through on the way to Maple Shade Farm. For a few things to do near the wedding in Delhi and nearby Oneonta and Cooperstown, check out the links below. If you love the outdoors like we do, plan to hike local trails for amazing views and fall foliage.</p>
+        <p>For more specific recommendations, please email us at <a href="mailto:dpitachip@gmail.com">dpitachip@gmail.com</a>. We have visited many times throughout the Catskills and can recommend some fun stops to check out, eat, and stay!</p>
+
+        <ul>
+          <li><a href="http://baseballhall.org/">Baseball Hall of Fame</a></li>
+          <li><a href="http://www.thisiscooperstown.com/">Cooperstown</a></li>
+          <li><a href="http://www.lrhs.com/">Cooperstown and Charlotte Valley Railroad- Fall Foliage Tours</a></li>
+          <li><a href="http://www.farmersmuseum.org/">The Farmers' Museum</a></li>
+          <li><a href="http://www.hanfordmills.org/">Hanford Mills Museum</a></li>
+          <li><a href="http://www.poppbutterflyconservatory.com/">Joseph L. Popp, Jr. Butterfly Conservatory</a></li>
+          <li><a href="http://www.ommegang.com/">Ommegang Brewery</a></li>
+          <li><a href="http://www.oneonta.ny.us/">Historic Oneonta</a></li>
+          <li><a href="http://nysparks.com/parks/18/details.aspx">Robert V. Riddell State Park</a></li>
+        </ul>
       </div>
 
       <div class="container">
         <a name="registry"></a>
         <h2>Gift Registries</h2>
-        <p><a href="http://www.crateandbarrel.com/Gift-Registry/Danielle-Pollaci-and-Christopher-Carpita/r5206935">Crate &amp; Barrel</a></p>
-        <p><a href="http://www.amazon.com/registry/wedding/2OH743OTJTULW">Amazon</a></p>
-        <p><a href="http://www.honeyfund.com/wedding/dpita">HoneyFund</a></p>
+        <ul>
+          <li><a href="http://www.crateandbarrel.com/Gift-Registry/Danielle-Pollaci-and-Christopher-Carpita/r5206935">Crate &amp; Barrel</a></li>
+          <li><a href="http://www.amazon.com/registry/wedding/2OH743OTJTULW">Amazon</a></li>
+          <li><a href="http://www.honeyfund.com/wedding/dpita">HoneyFund</a></li>
+        </ul>
       </div>
 
       <div class="container">
