--- a/src/public/index.html
+++ b/src/public/index.html
@@ -13,7 +13,7 @@
       <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css" />
 -->
 
-    <link href="/assets/css/wedding.css" rel="stylesheet">
+    <link href="/assets/css/wedding.css?v=2" rel="stylesheet">
 
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
