Airport info and dress definition
Change-Id: Iee89150019c8b94a96208b3dd92b591f2b0f320a

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -82,7 +82,7 @@
         <h4>The Big Day <small>4pm-12am</small></h4>
         <p>Maple Shade Farm&mdash; 2066 County Hwy 18, Delhi, New York</p>
         <p>607.746.8866</p>
-        <p>Join us for our ceremony, BBQ, and dancing! Dress is festive. Wedges or flats are recommended (you'll sink in heels!).</p>
+        <p>Join us for our ceremony, BBQ, and dancing! Dress is festive: wear a dress shirt and pants, suit, or dress. Wedges or flats are recommended (you'll sink in heels!).</p>
 
         <h3>Sunday, September 28th</h3>
         <h4>Bagel Brunch <small>10am-1pm</small></h4>
@@ -111,8 +111,8 @@
             sure to have your directions printed or saved offline!
           </p>
 
-          <p>The closest airport is in Binghamton (BGM), but if you're renting
-          a car it's possible that flying to EWR, JFK, or LGA will be less costly.</p>
+          <p>The closest airport is in Binghamton (BGM), and the most recommended is Albany (ALB),
+          but if you're renting a car it's possible that flying to NYC (EWR, JFK, or LGA) will be less costly.</p>
 
           <p>You can also take the <a href="http://trailwaysny.com/index.php/terminal-locations/">Trailways</a> bus line to Oneonta, and the station is close to the center of town where taxi pickup can be easily arranged.</p>
 
