Add contact info for Amanda
Change-Id: I5718e9e17a34a0c89081414a10fc3f3936275195

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -116,7 +116,7 @@
 
           <p>You can also take the <a href="http://trailwaysny.com/index.php/terminal-locations/">Trailways</a> bus line to Oneonta, and the station is close to the center of town where taxi pickup can be easily arranged.</p>
 
-          <p>Please <a href="mailto:dpitachip@gmail.com">contact us</a> if you want to carpool or have space in your vehicle for others.</p>
+          <p>Please <a href="#contact">contact us</a> if you want to carpool or have space in your vehicle for others.</p>
 
           <h3>Taxi Services</h3>
 
@@ -216,8 +216,8 @@
       <div class="container">
       <a name="contact"></a>
       <h2>Contact Us</h2>
-      <p>Email us at <a href="mailto:dpitachip@gmail.com">dpitachip@gmail.com</a>
-       with questions, comments, or excitations!</p>
+      <p>Our wedding coordinator, Amanda Lyons, can be reached by email at <a href="mailto:amandamarielyons@gmail.com">amandamarielyons@gmail.com</a>
+      or cell phone at 917-703-7747.</p>
        <p>&nbsp;</p>
     </div> <!-- /container -->
     <script src="/assets/js/wedding.js"></script>
