add google site verification
Change-Id: I27c8c56772f697d297d3bd603e35261af8fca7ce

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="Danielle &amp; Chris">
+    <meta name="google-site-verification" content="alu7EDd52wmYBFtbfYbtibECgpk_z-pmM3DX3oodDK0" />
 
     <title>Danielle &amp; Chris are Getting Married on September 27, 2014</title>
 <!--
