build: Dockerize the whole static site
- Use alpine as a base image (super light!)
- Remove node update scripts, since we will use Docker Cloud
- Remove git submodule and snapshot vendor code to simplify build
- All build logic is in Dockerfile + compose

--- a/src/public/gallery.html
+++ b/src/public/gallery.html
@@ -12,6 +12,7 @@
 
     <link href="/assets/css/wedding.css" rel="stylesheet">
     <link href="/assets/css/lightbox.css" rel="stylesheet" />
+    <link href="/assets/css/screen.css" rel="stylesheet" />
     <script src="/assets/js/jquery-1.10.2.min.js"></script>
     <script src="/assets/js/lightbox-2.6.min.js"></script>
   </head>
